--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npx yarn remove:junk && npx ncc build ./index.js --no-cache --minify --transpile-only"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0",
