--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,9 +51,14 @@ jobs:
         run: |
           mv index.js app.js
 
+      - name: 💯 Configuration for Production
+        run: |
+          sed -i 's/VOLUMES=.\/volumes/VOLUMES=\/home\/jefripunza\/volumes\/${{ github.event.repository.name }}\//g' .env
+
       - name: 📡 Remote Finishing (raspberry)
         run: |
           mkdir -p /home/jefripunza/apps/${{ github.event.repository.name }}
           mkdir -p /home/jefripunza/volumes/${{ github.event.repository.name }}
+          mv -f ./volumes/* /home/jefripunza/volumes/${{ github.event.repository.name }}/
           rm -rf /home/jefripunza/apps/${{ github.event.repository.name }}/*
           mv ./* /home/jefripunza/apps/${{ github.event.repository.name }}/
