--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,5 +60,6 @@ jobs:
           mkdir -p /home/jefripunza/apps/${{ github.event.repository.name }}
           mkdir -p /home/jefripunza/volumes/${{ github.event.repository.name }}
           mv -f ./volumes/* /home/jefripunza/volumes/${{ github.event.repository.name }}/
+          rm -rf volumes
           rm -rf /home/jefripunza/apps/${{ github.event.repository.name }}/*
           mv ./* /home/jefripunza/apps/${{ github.event.repository.name }}/
