--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,5 +61,7 @@ jobs:
           mkdir -p /home/jefripunza/volumes/${{ github.event.repository.name }}
           mv -f ./volumes/* /home/jefripunza/volumes/${{ github.event.repository.name }}/
           rm -rf volumes
+          pm2 stop testing
           rm -rf /home/jefripunza/apps/${{ github.event.repository.name }}/*
           mv . /home/jefripunza/apps/${{ github.event.repository.name }}/
+          pm2 start testing
