--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,8 +61,5 @@ jobs:
           mkdir -p /home/jefripunza/volumes/${{ github.event.repository.name }}
           mv -f ./volumes/* /home/jefripunza/volumes/${{ github.event.repository.name }}/
           rm -rf volumes
-          pm2 stop testing
-          sleep 3
           rm -rf /home/jefripunza/apps/${{ github.event.repository.name }}/*
-          mv . /home/jefripunza/apps/${{ github.event.repository.name }}/
-          pm2 start testing
+          mv . /home/jefripunza/apps/${{ github.event.repository.name }}
